examples/good/06_functions.xd
void proc(string str) {
    print(str);
    yeet;
}

int main() {
    print("Before call");
    proc("Hi, this is function");
    print("After call");
    yeet 0;
}
