examples/bad/arithmetic.xd
int main() {
    yeet 5 / 0;
    XD yeet 5 % 0;
}